Enable CompactObjectHeaders